fix double scroll, update drawer and tab styling

--- a/privacyidea/static_new/src/app/components/token/token.component.scss
+++ b/privacyidea/static_new/src/app/components/token/token.component.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/styles";
 
 $gap-2rem: 2rem;
-$margin-bottom-main: 6rem;
+$margin-bottom-main: 9.5rem;
 
 .token-layout {
   display: flex;
