--- a/privacyidea/static_new/src/styles/styles.scss
+++ b/privacyidea/static_new/src/styles/styles.scss
@@ -12,6 +12,7 @@ html, body {
   background: var(--background);
   font-family: 'Roboto', sans-serif;
   margin: 0;
+  overflow: hidden;
 }
 
 :root {
